<resources>
    <string name="app_name">OpenIM(c_base_open)</string>
    <string name="open_im">欢迎使用OpenIM</string>
    <string name="login">登录</string>
    <string name="read">我已阅读并同意：</string>
    <string name="protocol">《服务协议》，《隐私权政策》</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="password">密码</string>
    <string name="phone_num">手机号码</string>
    <string name="mail">邮箱</string>
    <string name="input_password">请输入密码</string>
    <string name="forgot_password">忘记密码</string>
    <string name="phone_register">手机号注册</string>
    <string name="mail_register">邮箱注册</string>
    <string name="input_mail">请输入邮箱</string>
    <string name="new_user">新用户注册</string>
    <string name="register">注册</string>

    <string name="add">添加</string>
    <string name="search">搜索</string>
    <string name="not_find_user">无法找到该用户</string>
    <string name="id">ID号</string>
    <string name="send_msg">发消息</string>
    <string name="openim_call">OpenIM电话</string>
    <string name="add_friend">添加好友</string>
    <string name="disassociate">解除好友关系</string>
    <string name="detail">详情</string>
    <string name="friend_verify">好友验证</string>
    <string name="group_verify">群聊验证</string>
    <string name="verification_code_send_mail">验证码已发送至邮箱</string>
    <string name="verification_code_send_phone">验证码已发送至手机</string>
    <string name="input_verification_code">请输入验证码(默认:666666)</string>
    <string name="resend_verification_code">重发验证码</string>
    <string name="after">后</string>
    <string name="send_succ">发送成功</string>
    <string name="name">你的姓名</string>
    <string name="input_name">请填写真实姓名</string>
    <string name="welcome">欢迎使用OpenIM</string>
    <string name="join_im">进入OpenIM</string>
    <string name="add_group">添加群聊</string>
    <string name="search_group_by_id">通过群ID号搜索添加</string>
    <string name="not_find_group">未找到该群聊</string>
    <string name="cancel">取消</string>

    <string name="send_friend_apply">发送添加好友申请</string>
    <string name="send_join_group_apply">发送入群申请</string>
    <string name="address_book">通讯录</string>
    <string name="nickname">昵称</string>
    <string name="Invite_add_friends">邀请对方扫码，添加好友</string>


</resources>
