<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            tools:context=".ui.login.LoginActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/welcome"
                    android:textColor="#ff333333"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="58dp"
                    android:layout_marginBottom="30dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/phoneTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_num"
                            android:textColor="#ff1d6bed"
                            android:textSize="14sp" />

                        <View
                            android:id="@+id/phoneVv"
                            android:layout_width="58dp"
                            android:layout_height="1dp"
                            android:background="#1D6BED" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/mailTv"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/mail"
                            android:textColor="#333333"
                            android:textSize="14sp" />

                        <View
                            android:id="@+id/mailVv"
                            android:layout_width="29dp"
                            android:layout_height="1dp"
                            android:background="#1D6BED"
                            android:visibility="invisible" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="56dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/phone_num"
                    android:textColor="#ff171a1d"
                    android:textSize="14sp" />

                <include
                    android:id="@+id/login_content"
                    layout="@layout/layout_login" />
            </LinearLayout>


            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="30dp"
                android:enabled="false"
                android:text="@string/login"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_checkbox"
                    android:paddingLeft="17dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read"
                    android:textColor="#ff333333"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="169dp"
                    android:layout_height="17dp"
                    android:text="@string/protocol"
                    android:textColor="#ff1d6bed"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#ff8e9ab0"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_not_account"
                    android:textColor="#ff8e9ab0"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/registerTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/phone_register"
                    android:textColor="#ff0089ff"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@drawable/splash_shape_gradient"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/welcome"
                android:textColor="#ff0089ff"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</layout>
